chore(tests): organizar e melhorar displays dos testes da classe DegolaBot